@@ -6,19 +6,10 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-      <h1>
-        <span id="breadcrumbs">
-          <span id="openxava">
-          	<a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava
-            </a>
-          </span>  
-          / <a href="index_en.html">documentation</a> /  
-				</span>
-        Reference guide
-      </h1>
+      <h1> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
+              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
+          / </span> Reference guide </h1>
       <ul>
-        <li><a class="wiki_link" href="overview_en.html">Overview</a></li>
         <li><a class="wiki_link" href="model_en.html">Model</a></li>
         <li><a class="wiki_link" href="view_en.html">View</a></li>
         <li><a class="wiki_link" href="tab_en.html">Tabular data</a></li>
