@@ -6,17 +6,11 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-      <h1 id="toc0"><a name="Guía de referencia"></a>
-                <span id="breadcrumbs"> 
-        	<span id="openxava"> 
-            <a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava </a> </span> 
-          / <a href="index_es.html">documentación</a> / 
-        </span>
-        Guía de
-        referencia</h1>
+      <h1 id="toc0"><a name="Guía de referencia"></a> <span id="breadcrumbs"> <span
+            id="openxava"> <a href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava
+              </a> </span> / <a href="index_es.html">documentación</a> / </span>
+        Guía de referencia</h1>
       <ul>
-        <li><a class="wiki_link" href="overview_es.html">Visión general</a></li>
         <li><a class="wiki_link" href="model_es.html">Modelo</a></li>
         <li><a class="wiki_link" href="view_es.html">Vista</a></li>
         <li><a class="wiki_link" href="tab_es.html">Datos tabulares</a></li>
